proj.android/app/.cxx/cmake/debug/x86/android_gradle_build_MyGame_x86.stdout.txt
[1/4] Building CXX object CMakeFiles/MyGame.dir/Classes/HelloWorldScene.cpp.o
[2/4] Building CXX object CMakeFiles/MyGame.dir/proj.android/app/jni/hellocpp/main.cpp.o
[3/4] Building CXX object CMakeFiles/MyGame.dir/Classes/AppDelegate.cpp.o
FAILED: C:\Users\Jugbot\AppData\Local\Android\Sdk\ndk\21.0.6113669\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe  --target=i686-none-linux-android16 --gcc-toolchain=C:/Users/Jugbot/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/Jugbot/AppData/Local/Android/Sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/windows-x86_64/sysroot  -DANDROID -DCOCOS2D_DEBUG=1 -DLWS_WITH_LIBUV -DMyGame_EXPORTS -DUSE_FILE32API -I../../../../../../Classes -I../../../../../../cocos2d/cocos/audio/include -I../../../../../../oboe/include -I../../../../../../cocos2d -I../../../../../../cocos2d/cocos -I../../../../../../cocos2d/extensions -I../../../../../../cocos2d/cocos/platform -I../../../../../../cocos2d/cocos/editor-support -I../../../../../../cocos2d/cocos/base -I../../../../../../cocos2d/cocos/platform/android -isystem ../../../../../../cocos2d/external/Box2D/include -isystem ../../../../../../cocos2d/external/chipmunk/include -isystem ../../../../../../cocos2d/external/freetype2/include/android/freetype2 -I../../../../../../cocos2d/external/recast/.. -isystem ../../../../../../cocos2d/external/bullet/include -isystem ../../../../../../cocos2d/external/bullet/include/bullet -isystem ../../../../../../cocos2d/external/jpeg/include/android -isystem ../../../../../../cocos2d/external/openssl/include/android -isystem ../../../../../../cocos2d/external/uv/include -isystem ../../../../../../cocos2d/external/webp/include/android -isystem ../../../../../../cocos2d/external/websockets/include/android -I../../../../../../cocos2d/external/tinyxml2/. -I../../../../../../cocos2d/external/xxhash/. -I../../../../../../cocos2d/external/xxtea/. -I../../../../../../cocos2d/external/clipper/. -I../../../../../../cocos2d/external/edtaa3func/. -I../../../../../../cocos2d/external/ConvertUTF/. -I../../../../../../cocos2d/external/poly2tri/.. -I../../../../../../cocos2d/external/md5/.. -isystem ../../../../../../cocos2d/external/curl/include/android -isystem ../../../../../../cocos2d/external/png/include/android -IC:/Users/Jugbot/AppData/Local/Android/Sdk/ndk/21.0.6113669/sources/android/cpufeatures -I../../../../../../cocos2d/external/android-specific/pvmp3dec/include -I../../../../../../cocos2d/external/android-specific/pvmp3dec/src -I../../../../../../cocos2d/external/android-specific/tremolo/. -isystem ../../../../../../cocos2d/external/zlib/include -I../../../../../../cocos2d/external/unzip/. -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -mstackrealign -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -frtti -fexceptions -fsigned-char -O0 -fno-limit-debug-info  -fPIC   -std=c++11 -MD -MT CMakeFiles/MyGame.dir/Classes/AppDelegate.cpp.o -MF CMakeFiles\MyGame.dir\Classes\AppDelegate.cpp.o.d -o CMakeFiles/MyGame.dir/Classes/AppDelegate.cpp.o -c C:\Users\Jugbot\Documents\GitHub\Allegro-Learning\Classes\AppDelegate.cpp
In file included from C:\Users\Jugbot\Documents\GitHub\Allegro-Learning\Classes\AppDelegate.cpp:27:
In file included from ../../../../../../Classes/SongLibrary.h:6:
In file included from ../../../../../../Classes/SongLevel.h:6:
../../../../../../Classes/MidiReader.h:14:5: error: no template named 'Vector'; did you mean 'cocos2d::Vector'?
    Vector<char*> messages();
    ^~~~~~
    cocos2d::Vector
../../../../../../cocos2d/cocos/base/CCVector.h:49:7: note: 'cocos2d::Vector' declared here
class Vector
      ^
In file included from C:\Users\Jugbot\Documents\GitHub\Allegro-Learning\Classes\AppDelegate.cpp:27:
In file included from ../../../../../../Classes/SongLibrary.h:6:
In file included from ../../../../../../Classes/SongLevel.h:6:
../../../../../../Classes/MidiReader.h:14:19: error: virtual function 'messages' has a different return type ('Vector<char *>') than the function it overrides (which has return type 'std::vector<char *>')
    Vector<char*> messages();
    ~~~~~~~~~~~~~ ^
../../../../../../Classes/MidiStream.h:14:32: note: overridden virtual function is here
    virtual std::vector<char*> messages() = 0;
            ~~~~~~~~~~~~~~~~~~ ^
In file included from C:\Users\Jugbot\Documents\GitHub\Allegro-Learning\Classes\AppDelegate.cpp:27:
In file included from ../../../../../../Classes/SongLibrary.h:6:
In file included from ../../../../../../Classes/SongLevel.h:7:
../../../../../../Classes/MidiSequencer.h:13:2: error: expected ';' after class
}
 ^
 ;
In file included from C:\Users\Jugbot\Documents\GitHub\Allegro-Learning\Classes\AppDelegate.cpp:27:
../../../../../../Classes/SongLibrary.h:15:5: error: no template named 'Vector'; did you mean 'cocos2d::Vector'?
    Vector<SongLevel> getSongNames();
    ^~~~~~
    cocos2d::Vector
../../../../../../cocos2d/cocos/base/CCVector.h:49:7: note: 'cocos2d::Vector' declared here
class Vector
      ^
C:\Users\Jugbot\Documents\GitHub\Allegro-Learning\Classes\AppDelegate.cpp:33:26: error: expected namespace name
using namespace cocos2d::experimental;
                ~~~~~~~~~^
5 errors generated.
ninja: build stopped: subcommand failed.
